--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/* IMPORT THE REGGAE FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Reggae+One&display=swap');
+
+
 * {
 	margin: 0;
 	padding: 0;
@@ -35,11 +39,12 @@ a {
 	font-family: monospace;
 }
 
-.social-icon  {
+.social-icon {
+	font-size: 70px;
 	width: auto;
-	font-size: 25px;
 }
 
+*/
 .social-icon:hover {
 	background: color: rgb(0, 100, 20);
 	color: rgb(255, 200, 0);
