--- a/styles.css
+++ b/styles.css
@@ -39,12 +39,15 @@ a {
 	font-family: monospace;
 }
 
-.social-icon {
+#banner .social-icon {
 	font-size: 70px;
 	width: auto;
+	animation-name: Color-animation;
+	animation-duration: 6s;
+	animation-iteration-count: infinite;
 }
 
-*/
+
 .social-icon:hover {
 	background: color: rgb(0, 100, 20);
 	color: rgb(255, 200, 0);
@@ -122,5 +125,21 @@ a {
 @media (max-width: 900px) {
 	.social-icon {
 		font-size: 50px;
+	}
+}
+
+/* SOCIAL MEDIA ANIMATION */
+
+@keyframes Color-animation {
+	0% {
+		color: rgb(40, 240, 40);
+	}
+
+	50% {
+		color: rgb(40, 40, 240);
+	}
+
+	100% {
+		color: rgb(40, 240, 40);
 	}
 }
